<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="version">v 0.9.2</string>
    
    <string name="about">关于我们</string>
    <string name="app_name">一起玩</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="servicephone">服务电话: 13524657535</string>
	<string name="servicename">汉枫电子科技</string>
	<string name="serviceweb">www.hi-flying.com</string>
	<string name="serviceadd">上海浦东新区川宏路365号511室</string>
	<string name="brag1">\t\t全球首创WindTalker风语对码技术，解决wifi链接路由器的难题。</string>
	<string name="brag2">\t\t强大的历史追溯功能，用电历史记录一目了然。</string>
	<string name="brag3">\t\t一个账号终身优惠，只要注册eachone全球用户账号，将终身享受终身9折优惠。</string>
	<string name="brag4">\t\t世界虽大，却触手可及，无论你在天涯海角，家就在你的身边。</string>
	<string name="inputusername">输入用户名</string>
	<string name="inputuserpwd">输入密码</string>
	<string name="inputssid">输入路由器SSID</string>
	<string name="inputpswd">输入Wifi密码</string>
	<string name="regist">注册</string>
	<string name="loginbtn">登陆</string>
	<string name="regist_username">用户名(长度不能低于6位)</string>
	<string name="regist_usernickname">昵称</string>
	<string name="regist_userpswd">密码(长度不能低于6位)</string>
	<string name="regist_userepswd">重复密码(长度不能低于6位)</string>
	<string name="regist_useremail">邮箱(每个邮箱号只能注册一次)</string>
	<string name="regist_capcha">验证码</string>
	
	<string name="add_nav_1">1、找到自己手机的扬声器。</string>
	<string name="add_nav_2">2、把扬声器靠近插座，开始全球独创的风雨对码。</string>
	<string name="next_step">下一步</string>
	
	<string name="setting_mymodule">我的设备</string>
	<string name="setting_set">用户设置</string>
	<string name="setting_nav">用户指南</string>
	<string name="setting_about">关于我们</string>
	<string name="moduleinfo">设备信息</string>
	<string name="usermodify_userphone">手机</string>
	<string name="usermodify_softver">软件版本</string>
	<string name="userguide_1">新手指南</string>
	<string name="userguide_2">常见问题</string>
	<string name="userguide_3">二维码</string>
	<string name="userguide_4">用户反馈</string>
	
	<string name="module_control">设备控制</string>
	<string name="module_edit">编辑设备</string>
	<string name="timer_manger">定时管理</string>
	<string name="smart_ctrl">智能控制</string>
	<string name="history">历史记录</string>
	<string name="net_stat">状态 :</string>
	<string name="timer">定时:</string>
	<string name="table_light">台灯</string>
	
	
	<string name="scene_ctrl">场景控制</string>
	<string name="light_ctrl">灯光控制</string>
	<string name="sys_ctrl">系统控制</string>
	<string name="helper">帮助信息</string>
	
	<string name="module_modify">设备修改</string>
	
	
	<string name="module_modify_module_name">设备名称</string>
	<string name="module_modify_choise_img">选择图片</string>
	<string name="module_modify_module_delete">删除设备</string>
	
	
	<string name="timer_add_timer_stat_open">开启</string>
	<string name="timer_add_timer_stat_close">关闭</string>
	<string name="timer_add_timer_stat_unable">未启用</string>
	<string name="timer_add_timer_stat_isloop">重复</string>
	<string name="timer_add_timer_stat_once">执行一次</string>
	<string name="timer_monday">周一</string>
	<string name="timer_tuesday">周二</string>
	<string name="timer_wednesday ">周三</string>
	<string name="timer_thursday">周四</string>
	<string name="timer_friday">周五</string>
	<string name="timer_saturday">周六</string>
	<string name="timer_sunday">周日</string>
	
	<string name="smart_ctrler_shit">
	    使用eachhome为你的手机充电，一旦充满电立即自动断电，节能省电的同时延长了手机电池的使用寿命，并杜绝安全隐患，充电保护功能只有在手机插上eachhome的时候才可启动。
	</string>
	
	<string name="tv_nav">
	    点击  "+" 号添加设备
	</string>
	
	<string name="relogin">重新登入</string>
	
	<!-- err string  -->
	
	<string name="changinfo_err">修改失败</string>
	<string name="add_module">添加设备</string>
</resources>
