<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    android:orientation="vertical" >
    
    <ScrollView 
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        >
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_margin="30dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_gravity="center"
                android:src="@drawable/logo_little"/>
            <EditText 
                android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@drawable/editext_bg"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:hint="@string/regist_username"
                android:singleLine="true"
                android:ems="16"/>
            <EditText 
                android:id="@+id/userdisplayName"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@drawable/editext_bg"
                android:layout_marginTop="10dp"
                 android:paddingLeft="10dp"
                android:hint="@string/regist_usernickname"
                android:singleLine="true"
                android:ems="16"/>
            <EditText 
                android:id="@+id/userpswd"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@drawable/editext_bg"
                android:layout_marginTop="10dp"
                 android:paddingLeft="10dp"
                android:hint="@string/regist_userpswd"
                android:inputType="textPassword"
                android:ems="16"/>
            <EditText 
                android:id="@+id/reuserpswd"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@drawable/editext_bg"
                android:layout_marginTop="10dp"
                 android:paddingLeft="10dp"
                android:hint="@string/regist_userepswd"
                android:inputType="textPassword"
                android:ems="16"/>
            <EditText 
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@drawable/editext_bg"
                android:layout_marginTop="10dp"
                 android:paddingLeft="10dp"
                android:hint="@string/regist_useremail"
                android:singleLine="true"
                android:ems="16"/>
            <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <EditText 
                    android:id="@+id/capcha"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:paddingLeft="10dp"
                android:background="@drawable/editext_bg"
                android:hint="@string/regist_capcha"
                android:ems="16"/>
                <ImageView 
                    android:id="@+id/imageCacha"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/editext_bg"
                    android:scaleType="centerInside"/>
            </LinearLayout>
            
            <Button 
                android:id="@+id/ok"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/regist"
                android:background="@color/registbtnbg"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
