<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/zigbee_icon"
        android:layout_width="122dp"
        android:layout_height="122dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/zigbee_icon" />

    <TextView
        android:id="@+id/moduleinfo_module_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/table_light"
        android:textColor="#F6AB00" />

    <TextView
        android:id="@+id/line1"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="#D8D8D8" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/net_stat"
            android:textColor="#F6AB00" />

        <TextView
            android:id="@+id/moduelinfo_module_stat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/net_stat"
            android:textColor="#F6AB00" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/timer"
            android:textColor="#F6AB00" />

        <TextView
            android:id="@+id/moduelinfo_module_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/net_stat"
            android:textColor="#F6AB00" />
    </LinearLayout>

    <TextView
        android:id="@+id/line2"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="#D8D8D8" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:rotation="-60"
                android:text="@string/scene_ctrl"
                android:textColor="#8EC11C"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/scene_ctrl"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:scaleType="centerInside"
                android:src="@drawable/sys_ctrler" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:rotation="-60"
                android:text="@string/light_ctrl"
                android:textColor="#8EC11C"
                android:textSize="12sp" />

            <ImageView
                 android:id="@+id/light_ctrl"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:scaleType="centerInside"
                android:src="@drawable/light_ctrler" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:rotation="-60"
                android:text="@string/sys_ctrl"
                android:textColor="#8EC11C"
                android:textSize="12sp" />

            <ImageView
                 android:id="@+id/sys_ctrl"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:scaleType="centerInside"
                android:src="@drawable/scene_ctrler" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:rotation="-60"
                android:text="@string/helper"
                android:textColor="#8EC11C"
                android:textSize="12sp" />

            <ImageView
                 android:id="@+id/helper"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:scaleType="centerInside"
                android:src="@drawable/helper_ctrler" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
