<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/userguid"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="#00000000"
                android:scaleType="centerInside"
                android:src="@drawable/user_guide_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/blue_yellow"
                android:textSize="@dimen/setting_font_size"
                android:text="@string/userguide_1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:orientation="vertical" >

            <ImageButton
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="#00000000"
                android:scaleType="centerInside"
                android:src="@drawable/user_guide_2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/blue_yellow"
                android:textSize="@dimen/setting_font_size" 
                android:text="@string/userguide_2" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="#00000000"
                android:scaleType="centerInside"
                android:src="@drawable/user_guide_3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/blue_yellow"
                android:textSize="@dimen/setting_font_size" 
                android:text="@string/userguide_3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:orientation="vertical" >

            <ImageButton
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="#00000000"
                android:scaleType="centerInside"
                android:src="@drawable/user_guide_4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/blue_yellow"
                android:textSize="@dimen/setting_font_size" 
                android:text="@string/userguide_4" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>